# starknet-abigen-rs

./: Cargo.toml  README.md  test.abi.json
.github/workflows/: ci.yml
contracts/: Makefile
contracts/abi/: kakarot.json  simple_get_set.json
contracts/src/: Makefile  basic.cairo  event.cairo  gen.cairo  lib.cairo  simple_get_set.cairo
contracts/src/abicov/: components.cairo  simple_types.cairo  structs.cairo
crates/abigen-macro/: Cargo.toml
crates/abigen-macro/src/: contract_abi.rs  contract_fetch.rs  lib.rs
crates/abigen-macro/src/expand/: contract.rs  enum.rs  event.rs  function.rs  generic.rs  mod.rs  struct.rs  utils.rs
crates/cairo-type-parser/: Cargo.toml
crates/cairo-type-parser/src/: abi_type.rs  cairo_enum.rs  cairo_event.rs  cairo_function.rs  cairo_struct.rs  lib.rs
crates/cairo-type-parser/src/abi_types/: array.rs  basic.rs  generic.rs  mod.rs  tuple.rs
crates/cairo-types/: Cargo.toml
crates/cairo-types/src/: error.rs  lib.rs  ty.rs
crates/cairo-types/src/types/: array.rs  boolean.rs  data_type.rs  felt.rs  integers.rs  mod.rs  option.rs  result.rs  starknet.rs  tuple.rs  u256.rs
crates/contracts/: Makefile  Scarb.toml
crates/contracts/data/: katana_key.json
crates/contracts/src/: lib.cairo
crates/macros/: Cargo.toml  README.md
crates/macros/src/: lib.rs
crates/macros/src/abigen/: contract_abi.rs  legacy.rs  mod.rs
crates/macros/src/abigen/expand/: contract.rs  enum.rs  event.rs  function.rs  function_legacy.rs  generic.rs  mod.rs  struct.rs
crates/macros/src/abigen/legacy/: mod.rs
crates/parser/: Cargo.toml
crates/parser/src/: cairo_enum.rs  cairo_event.rs  cairo_function.rs  cairo_struct.rs  call.rs  lib.rs
crates/parser/src/abi_types/: array.rs  basic.rs  generic.rs  mod.rs  tuple.rs
crates/parser/src/cairo_types/: error.rs  mod.rs
crates/parser/src/cairo_types/types/: array.rs  array_legacy.rs  boolean.rs  felt.rs  integers.rs  mod.rs  option.rs  result.rs  starknet.rs  tuple.rs
examples/: abigen.rs  kkrt.rs  simple_get_set.rs
examples/abi/: simple_get_set.abi.json  simple_read_write_val.abi.json
examples/kakarot/: proxy.rs
examples/kakarot/abi/: blockhash_registry.json  contract_account.json  externally_owned_account.json  kakarot.json  proxy.json
expanded-examples/: Cargo.toml
expanded-examples/src/: basic.rs  enum_basic.rs  enum_generic.rs  main.rs  struct_basic.rs  struct_generic.rs  tuple_basic.rs  tuple_generic.rs
scripts/: clippy.sh
snabi/: Cargo.toml  README.md
snabi/src/: a.rs  args.rs  main.rs  output_args.rs
snabi/src/subcommands/: fetch.rs  from_sierra.rs  mod.rs
src/: a.rs  katana_default.rs  lib.rs  main.rs
src/autogen_abis/: basic_abi.rs  event_abi.rs  gen_abi.rs  mod.rs
src/tests/: mod.rs  option.rs  result.rs  starknet_types.rs  tuple.rs
