[package]
name = "starknet-abigen"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/macros",
    "crates/parser",
]

[workspace.dependencies]
# workspace crates
starknet-abigen-parser = { path = "crates/parser" }
starknet-abigen-macros = { path = "crates/macros" }

# serde
serde = { version = "1.0", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

starknet = "0.6.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.15.0", features = ["full"] }
url = "2.2.2"

# Dependencies for the testing app in src.
[dependencies]
url.workspace = true
anyhow.workspace = true
tokio.workspace = true
starknet.workspace = true
serde_json.workspace = true

# Local
starknet-abigen-parser.workspace = true
starknet-abigen-macros.workspace = true
