[package]
name = "snabi"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2", features = [ "derive" ] }
clap_complete = "4.3"
colored = "2"
colored_json = "3.2.0"
console = "0.15.7"
url.workspace = true
anyhow.workspace = true
tokio.workspace = true
cairo-types.workspace = true
cairo-type-parser.workspace = true
abigen-macro.workspace = true
starknet.workspace = true
serde_json.workspace = true
serde.workspace = true
