[package]
name = "abigen-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

serde.workspace = true
serde_json.workspace = true

starknet.workspace = true
cairo-types.workspace = true
cairo-type-parser.workspace = true

url = "2.4.1"